Make summary badges fixed width for alignment

--- a/src/ciskubebenchreports/page.scss
+++ b/src/ciskubebenchreports/page.scss
@@ -4,15 +4,15 @@
     .TableCell {
       &.name {
         text-align: left;
-        flex-grow: 0.50;
+        flex-grow: 0.45;
       }
       &.summary {
         text-align: left;
-        flex-grow: 0.25;
+        flex-grow: 0.4;
       }
       &.scanner {
         text-align: left;
-        flex-grow: 0.25;
+        flex-grow: 0.15;
       }
     }
   }
@@ -20,6 +20,8 @@
   .Badge {
     margin-left: 4px;
     margin-right: 4px;
+    width: 3em;
+    text-align: right;
 
     &.theme-fail {
       color: white;
